<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="11"
    android:orientation="vertical"
    android:padding="12sp"
    android:background="@color/background">
    <TextView
        android:layout_weight="1"
        android:text="@string/reghere"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <EditText
        android:id="@+id/name"
        android:inputType="textEmailAddress"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <EditText
        android:id="@+id/Loc"
        android:inputType="textEmailAddress"
        android:hint="@string/location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <EditText
        android:id="@+id/paswd"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/regbtn"
        android:text="@string/reg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/havenote"/>
    <Button
        android:id="@+id/lgbtn"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/verbtn"
        android:text="@string/frgtpsd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />



</LinearLayout>
