<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassword"
    android:orientation="vertical"
    android:weightSum="12"
    android:background="@color/background"
    android:padding="12sp">

    <ImageView
        android:src="@drawable/arts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>
    <TextView
        android:layout_weight="1"
        android:text="@string/frgtpsd"
        android:textSize="22sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimaryDark"
        android:layout_height="0dp" />

    <TextView
        android:layout_weight="1"
        android:text="@string/enterId"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:layout_height="0dp" />


    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


    <Button
        android:id="@+id/restPwdbtn"
        android:text="@string/resetpaswd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAllCaps="false"
        />

    <TextView
        android:layout_weight="1"
        android:text="@string/or"
        android:textSize="15sp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:textColor="@color/colorPrimary"
        android:layout_height="0dp" />

    <Button
        android:id="@+id/sgnbtn"
        android:text="@string/signin"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/lgbtn"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorAccent"
        android:textAllCaps="false"
        />


</LinearLayout>