<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:textSize="25sp"
            android:textColor="#000" />

            <EditText
                android:padding="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/cardview_shadow_end_color"
                android:textColor="#000"
                android:hint="@string/caption"
                android:id="@+id/cap"
                tools:ignore="PrivateResource"
                android:layout_below="@+id/heading"/>
        <LinearLayout
            android:padding="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cap"
            android:orientation="horizontal"
            android:weightSum="4">
            <Button
                android:layout_weight="2"
                android:id="@+id/chPicBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_photo"
                android:textColor="@color/background"
                android:background="@color/design_default_color_primary"/>
            <Button
                android:layout_weight="2"
                android:id="@+id/tkPicBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/take_photo"
                android:textColor="@color/background"
                android:background="@color/design_default_color_primary"/>
        </LinearLayout>
        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="@android:dimen/thumbnail_height"
            android:layout_centerInParent="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20sp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_ok"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20sp"
            android:textSize="18sp"
            android:textColor="#33bbff"
            android:id="@+id/action_cancel"/>

    </RelativeLayout>
</LinearLayout>