<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    android:weightSum="8">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="80sp"
            android:layout_height="80sp"
            android:src="@drawable/artgallery"
            android:layout_centerVertical="true"
            tools:ignore="NestedWeights"
            />
        <TextView
            android:id="@+id/usrName"
            android:layout_width="@android:dimen/thumbnail_height"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:layout_toEndOf="@id/profile_image"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/ppt"/>
        <LinearLayout
            android:id="@+id/ppt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_alignParentBottom="true">

            <EditText
                android:id="@+id/post"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:padding="15sp"
                android:hint="@string/post"
                android:background="@color/cardview_shadow_end_color"
                tools:ignore="PrivateResource"
                />
            <Button
                android:id="@+id/picBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:drawable/ic_menu_camera"
                android:layout_weight=".5"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_weight=".5"/>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/frame">

        </FrameLayout>
    </RelativeLayout>
    <LinearLayout
        android:padding="8sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="6">

        <Button
            android:textColor="@color/background"
            android:id="@+id/photosBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/photos"
            tools:ignore="NestedWeights" />

        <Button
            android:textColor="@color/background"
            android:id="@+id/albumsBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/profile" />

        <Button
            android:textColor="@color/background"
            android:id="@+id/followBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/follow" />


    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>